# Cargo.toml

[package]
name = "meshbot_udp"
version = "0.2.1"
edition = "2024"
resolver = "2"


[features]
default = []
gen = ["dep:prost-build", "dep:protoc-bin-vendored", "dep:walkdir"]
ts-gen = ["dep:specta", "dep:specta-typescript"]
serde = []


[dependencies]
anyhow = "1"
base64 = { version = "0" }
chrono = { version = "0" }
clap = { version = "4", features = ["derive"] }
futures = { version = "0" }
hex-literal = "1"
pretty-hex = "0"
prost = "0.14"
rand = { version = "0", features = ["std_rng", "os_rng"] }
rust-crypto = "0"
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0"
aes = "0"
ccm = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
shellexpand = { version = "3", features = ["full"] }
specta = { git = "https://github.com/specta-rs/specta.git", rev = "b596ef0", optional = true, features = [
    "derive",
    "export",
    "chrono",
], version = "=2.0.0-rc.22" }
specta-typescript = { git = "https://github.com/specta-rs/specta.git", rev = "b596ef0", optional = true, version = "=0.0.9" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"


[build-dependencies]
anyhow = "1"
build-data = "0"
prost-build = { version = "0.14", optional = true }
protoc-bin-vendored = { version = "3.2.0", optional = true }
walkdir = { version = "2.5", optional = true }


[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1


[profile.minsize]
inherits = "release"
strip = true
lto = "fat"
opt-level = "s"
panic = "abort"

# EOF
